fix playlist header overflow

--- a/app/playlists/views/PlaylistsView/styles.scss
+++ b/app/playlists/views/PlaylistsView/styles.scss
@@ -16,5 +16,7 @@
 
   > :nth-child(2) {
     flex-grow: 1;
+
+    min-width: 0;
   }
 }
